[project]
name = "myvllm"
version = "0.1.0"
description = "A custom vLLM project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "transformers",
    "torch",
    "xxhash",
    "vllm>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

